# cdc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml  cross-ci.yml  lint-docs.yml
benches/: benchmarks.rs
examples/: chunk.rs  separator.rs  tree01.rs  tree02.rs
src/: chunk.rs  lib.rs  polynom.rs  rolling_hash.rs  separator.rs  tree.rs
