[package]
name = "cdc"
version = "0.1.0"
authors = ["Vincent Cantin <vincent.cantin@le-moulin-studio.com>"]
homepage = "https://github.com/green-coder/cdc"
license = "MIT"
readme = "README.md"
repository = "https://github.com/green-coder/cdc"
rust-version = "1.60.0"
description = "A library for performing Content-Defined Chunking (CDC) on data streams."

exclude = ["*.bin"]
keywords = ["rabin", "cdc", "chunk", "merkle", "dedup"]

[dependencies]

[dev-dependencies]
arrayref = "0.3.7"
criterion = "0.5"
ring = "0.17.6"

[[bench]]
name = "benchmarks"
harness = false
